--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,179 +52,103 @@ build:
     - ssh-add ~/.ssh/id_rsa
     - ssh-keyscan -H vps.purintech.id.vn >> ~/.ssh/known_hosts 2>/dev/null || echo "SSH keyscan failed"
   script:
-    - echo "Direct deployment to server without file upload..."
-    - echo "Connecting to server for cleanup and direct git clone..."
+    - echo "Smart deployment - Docker cleanup without sudo..."
     - |
       timeout 600 ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=60 fsoftguy@vps.purintech.id.vn "
         set -e
         echo 'Checking current disk space...'
         df -h ~/
         
-        echo 'Performing aggressive cleanup to free disk space...'
+        echo 'Performing Docker cleanup (no sudo required)...'
         
-        # Clean up Docker system
-        echo 'Cleaning Docker system...'
+        # Setup Docker environment
         export PATH=\"\$HOME/bin:\$PATH\"
         export DOCKER_HOST=\"unix:///run/user/\$(id -u)/docker.sock\"
         
         systemctl --user start docker.service 2>/dev/null || echo 'Docker service already running'
         sleep 3
         
-        # Stop all running containers
-        docker stop \$(docker ps -q) 2>/dev/null || echo 'No running containers'
+        # Smart Docker cleanup without sudo
+        echo 'Stopping and removing old containers...'
+        docker stop \$(docker ps -aq) 2>/dev/null || echo 'No containers to stop'
+        docker rm \$(docker ps -aq) 2>/dev/null || echo 'No containers to remove'
         
-        # Remove all containers
-        docker container prune -f 2>/dev/null || echo 'Container prune completed'
+        # Remove Docker images (keeping base images)
+        echo 'Removing custom images only...'
+        docker rmi \$(docker images --filter=reference='team03*' -q) 2>/dev/null || echo 'No team03 images to remove'
         
-        # Remove unused images
-        docker image prune -a -f 2>/dev/null || echo 'Image prune completed'
+        # Clean up build directories (user space only)
+        echo 'Cleaning user build directories...'
+        rm -rf ~/docker-builds/* 2>/dev/null || echo 'No build dirs to clean'
+        rm -rf ~/team03-* 2>/dev/null || echo 'No team03 dirs to clean'
+        rm -rf ~/project.tar.gz 2>/dev/null || echo 'No project archive to clean'
         
-        # Remove unused volumes
-        docker volume prune -f 2>/dev/null || echo 'Volume prune completed'
-        
-        # Remove unused networks
-        docker network prune -f 2>/dev/null || echo 'Network prune completed'
-        
-        # Clean up old build directories
-        echo 'Cleaning old build directories...'
-        rm -rf ~/docker-builds/* 2>/dev/null || echo 'No old builds to clean'
-        rm -rf ~/project.tar.gz 2>/dev/null || echo 'No old project archive'
-        
-        # Clean up logs
-        echo 'Cleaning logs...'
-        sudo journalctl --vacuum-time=1d 2>/dev/null || echo 'Log cleanup completed'
-        
-        # Clean package cache
-        echo 'Cleaning package cache...'
-        sudo apt-get clean 2>/dev/null || echo 'Package cache cleaned'
-        sudo apt-get autoremove -y 2>/dev/null || echo 'Autoremove completed'
+        # Clean user temp files
+        echo 'Cleaning user temp files...'
+        rm -rf ~/.cache/* 2>/dev/null || echo 'No cache to clean'
+        rm -rf /tmp/tmp.* 2>/dev/null || echo 'No temp files to clean'
         
         echo 'Disk space after cleanup:'
         df -h ~/
         
-        echo 'Setting up fresh build environment...'
-        BUILD_DIR=~/team03-direct-build
+        echo 'Setting up minimal build environment...'
+        BUILD_DIR=~/build
         rm -rf \$BUILD_DIR
         mkdir -p \$BUILD_DIR
         cd \$BUILD_DIR
         
-        echo 'Cloning repository directly on server...'
-        git clone -b $TARGET_BRANCH --depth 1 \"https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn/hcm25_cpl_net_06/team03_be.git\" .
+        echo 'Cloning repository with minimal size...'
+        git clone -b $TARGET_BRANCH --single-branch --depth 1 \"https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn/hcm25_cpl_net_06/team03_be.git\" .
         
-        echo 'Repository cloned successfully!'
-        ls -la
+        # Remove git history to save space
+        rm -rf .git
         
-        echo 'Setting up Docker environment...'
-        export PATH=\"\$HOME/bin:\$PATH\"
-        export DOCKER_HOST=\"unix:///run/user/\$(id -u)/docker.sock\"
-        
-        systemctl --user start docker.service 2>/dev/null || echo 'Docker service already running'
-        sleep 3
+        echo 'Repository prepared!'
         
         echo 'Testing Docker access...'
         if docker version > /dev/null 2>&1; then
-          echo 'Rootless Docker accessible!'
-          echo \"Docker version: \$(docker version --format '{{.Server.Version}}')\"
+          echo 'Docker accessible!'
         else
           echo 'Docker not accessible!'
-          echo 'Checking Docker service status:'
-          systemctl --user status docker.service
           exit 1
         fi
-        
-        echo 'Checking Dockerfile...'
-        if [ ! -f Dockerfile ]; then
-          echo 'ERROR: Dockerfile not found!'
-          ls -la
-          exit 1
-        fi
-        
-        echo 'Logging into GitLab Container Registry...'
-        echo 'Skipping registry login - using local images only'
         
         echo 'Building Docker image...'
-        docker build -t 'team03-webapi:latest' -t 'team03-webapi:$CI_COMMIT_SHA' .
+        docker build -t 'team03-webapi:latest' .
         
         if [ \$? -eq 0 ]; then
           echo 'Docker build successful!'
-          echo 'BUILD_STATUS=SUCCESS' > ~/build_status.txt
           
-          echo 'Deploying full stack (API + Database + Elasticsearch)...'
-          echo 'Setting up production environment variables...'
+          echo 'Deploying single container...'
           
-          # Export environment variables for production
-          export DB_PASSWORD='team03_secure_pass_2024'
-          export JWT_SECRET_KEY='GvlKp62o31vaP3WzWsQDO3hOQpZdbhtt'
-          export VNPAY_TMN_CODE='7QRTMNBH'
-          export VNPAY_HASH_SECRET='4046G9C8YY9H8WFSJG8AVB9VZNTT1D68'
-          export EMAIL_PASSWORD='jurk cvow hmtg dovz'
+          # Stop old container
+          docker stop team03-webapi 2>/dev/null || echo 'No old container'
+          docker rm team03-webapi 2>/dev/null || echo 'Container removed'
           
-          echo 'Checking for docker-compose.production.yml...'
-          if [ ! -f docker-compose.production.yml ]; then
-            echo 'Using docker-compose.yml as fallback...'
-            COMPOSE_FILE='docker-compose.yml'
-          else
-            echo 'Using docker-compose.production.yml...'
-            COMPOSE_FILE='docker-compose.production.yml'
-          fi
+          # Start new container
+          echo 'Starting new container...'
+          CONTAINER_ID=\$(docker run -d \\
+            --name team03-webapi \\
+            -p 8081:8081 \\
+            --restart unless-stopped \\
+            team03-webapi:latest 2>&1)
           
-          # Step 1: Stop existing services
-          echo 'Stopping existing services...'
-          docker-compose -f \$COMPOSE_FILE down 2>/dev/null || echo 'No existing services running'
-          
-          # Step 2: Clean up old containers and volumes if needed
-          echo 'Cleaning up old containers...'
-          docker container prune -f 2>/dev/null || echo 'Container cleanup completed'
-          
-          # Step 3: Deploy full stack
-          echo \"Starting full stack deployment with \$COMPOSE_FILE...\"
-          docker-compose -f \$COMPOSE_FILE up -d
-          
-          if [ \$? -eq 0 ]; then
-            echo 'Full stack deployment successful!'
+          if echo \"\$CONTAINER_ID\" | grep -E '^[a-f0-9]{12,}' > /dev/null; then
+            echo \"Container started: \$CONTAINER_ID\"
             
-            echo 'Waiting for services to initialize...'
-            sleep 20
+            sleep 8
             
-            echo 'Checking service status...'
-            docker-compose -f \$COMPOSE_FILE ps
+            # Test application
+            HEALTH_CHECK=\$(curl -s -o /dev/null -w \"%{http_code}\" http://localhost:8081 2>/dev/null || echo '000')
+            echo \"Health check: \$HEALTH_CHECK\"
             
-            echo 'Testing database connection...'
-            DB_STATUS=\$(docker exec team03-db pg_isready -U postgres -d team03_db 2>/dev/null || echo 'NOT_READY')
-            echo \"Database status: \$DB_STATUS\"
-            
-            echo 'Testing elasticsearch...'
-            ES_STATUS=\$(docker exec team03-elasticsearch curl -f http://localhost:9200/_cluster/health 2>/dev/null || echo 'NOT_READY')
-            echo \"Elasticsearch status: \$ES_STATUS\"
-            
-            echo 'Testing API application...'
-            sleep 10
-            API_HEALTH=\$(curl -s -o /dev/null -w \"%{http_code}\" http://localhost:8081 2>/dev/null || echo '000')
-            echo \"API health check response: \$API_HEALTH\"
-            
-            if [ \"\$API_HEALTH\" != \"000\" ]; then
-              echo 'API is responding!'
-            else
-              echo 'API not responding yet, checking logs...'
-              docker logs team03-webapi 2>/dev/null | tail -20 || echo 'No API logs available'
-            fi
-            
-            # Display service URLs
             echo ''
-            echo '======= FULL STACK DEPLOYMENT SUCCESSFUL ======='
-            echo '🌐 Application URL: http://vps.purintech.id.vn:8081'
-            echo '📚 API Base URL: http://vps.purintech.id.vn:8081/api'
-            echo '📖 Swagger UI: http://vps.purintech.id.vn:8081/swagger'
-            echo '❤️ Health Check: http://vps.purintech.id.vn:8081/health'
-            echo '🗄️ Database: PostgreSQL on port 5432 (internal)'
-            echo '🔍 Elasticsearch: http://vps.purintech.id.vn:9200'
-            echo '================================================='
-            echo 'Full stack is now live and accessible!'
+            echo '===== DEPLOYMENT SUCCESSFUL ====='
+            echo 'Application URL: http://vps.purintech.id.vn:8081'
+            echo '=================================='
             echo 'BUILD_STATUS=SUCCESS' > ~/build_status.txt
           else
-            echo 'ERROR: Full stack deployment failed!'
-            echo 'Checking docker-compose logs...'
-            docker-compose -f \$COMPOSE_FILE logs --tail=50 || echo 'No compose logs available'
+            echo \"Container start failed: \$CONTAINER_ID\"
             echo 'BUILD_STATUS=DEPLOY_FAILED' > ~/build_status.txt
           fi
         else
@@ -232,14 +156,12 @@ build:
           echo 'BUILD_STATUS=BUILD_FAILED' > ~/build_status.txt
         fi
         
-        echo 'Cleaning up build directory...'
+        echo 'Cleaning up...'
         cd ~
         rm -rf \$BUILD_DIR
         
-        echo 'Final disk space check:'
+        echo 'Final disk space:'
         df -h ~/
-        
-        echo 'Build and deployment process completed!'
       "
     - ssh -o StrictHostKeyChecking=no fsoftguy@vps.purintech.id.vn "cat ~/build_status.txt 2>/dev/null || echo 'BUILD_STATUS=UNKNOWN'" > build_status.txt
     - cat build_status.txt
